Remoção de classe.